Fixed line spacing of about section on phone:

--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -238,12 +238,11 @@ body {
     }
 
     .about-div {
-        width: 100%;
+        width: 95%;
+        margin-left: auto;
+        margin-right: auto;
         padding-top: 5vh;
 
-        & > p {
-            font-size: 2.5vh;
-        }
     }
 
     .about-heading {
@@ -265,7 +264,7 @@ body {
 
     .about p {
         font-size: 2vh;
-        line-height: 2vh;
+        /* line-height: 2vh; */
     }
 
     @keyframes flag-rotate {
